--- a/index.html
+++ b/index.html
@@ -1,1 +1,197 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>GTA Mods do Pedro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #111;
+            color: #fff;
+        }
+        header {
+            background: linear-gradient(90deg, #ff0000, #8b0000);
+            padding: 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.2em;
+        }
+        header p {
+            margin-top: 5px;
+            opacity: 0.9;
+        }
+        nav {
+            background-color: #000;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        nav a {
+            color: #fff;
+            padding: 12px 18px;
+            text-decoration: none;
+            transition: background 0.3s;
+        }
+        nav a:hover {
+            background-color: #ff0000;
+        }
+        .container {
+            padding: 25px;
+            max-width: 1200px;
+            margin: auto;
+        }
+        h2 {
+            border-left: 5px solid #ff0000;
+            padding-left: 10px;
+        }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .card {
+            background-color: #1c1c1c;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.6);
+            transition: transform 0.3s;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+        }
+        .card h3 {
+            margin-top: 0;
+        }
+        .card a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 14px;
+            background-color: #ff0000;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 0.9em;
+        }
+        footer {
+            background-color: #000;
+            text-align: center;
+            padding: 15px;
+            margin-top: 30px;
+            font-size: 0.9em;
+            opacity: 0.8;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>GTA Mods do Pedro</h1>
+    <p>Os melhores mods de GTA V em um só lugar</p>
+</header>
+
+<nav>
+    <a href="#carros">Carros</a>
+    <a href="#casas">Casas</a>
+    <a href="#mapas">Mapas</a>
+    <a href="#armas">Armas</a>
+    <a href="#scripts">Scripts</a>
+    <a href="#top">Top Mods</a>
+</nav>
+
+<div class="container">
+
+    <section id="carros">
+        <h2>🚗 Carros por Marca</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>BMW</h3>
+                <p>Os melhores mods de carros BMW para GTA V.</p>
+                <a href="https://www.gta5-mods.com/vehicles/bmw">Ver Mods</a>
+            </div>
+            <div class="card">
+                <h3>Ferrari</h3>
+                <p>Supercarros Ferrari com alta qualidade.</p>
+                <a href="https://www.gta5-mods.com/vehicles/ferrari">Ver Mods</a>
+            </div>
+            <div class="card">
+                <h3>Porsche</h3>
+                <p>Carros esportivos Porsche realistas.</p>
+                <a href="https://www.gta5-mods.com/vehicles/porsche">Ver Mods</a>
+            </div>
+            <div class="card">
+                <h3>Lamborghini</h3>
+                <p>Modelos Lamborghini incríveis.</p>
+                <a href="https://www.gta5-mods.com/vehicles/lamborghini">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="casas">
+        <h2>🏠 Casas e Mansões</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Mansões</h3>
+                <p>Casas de luxo para GTA V.</p>
+                <a href="https://www.gta5-mods.com/maps">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="mapas">
+        <h2>🗺️ Mapas</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Mapas Customizados</h3>
+                <p>Novas cidades e áreas.</p>
+                <a href="https://www.gta5-mods.com/maps">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="armas">
+        <h2>🔫 Armas</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Armas Realistas</h3>
+                <p>Novas armas e melhorias.</p>
+                <a href="https://www.gta5-mods.com/weapons">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="scripts">
+        <h2>📱 Scripts e Aparelhos</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Scripts</h3>
+                <p>Mods que mudam a jogabilidade.</p>
+                <a href="https://www.gta5-mods.com/scripts">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="top">
+        <h2>⭐ Top Mods</h2>
+        <div class="grid">
+            <div class="card">
+                <h3>Mais Usados</h3>
+                <p>Os mods mais populares da comunidade.</p>
+                <a href="https://www.gta5-mods.com/">Ver Mods</a>
+            </div>
+        </div>
+    </section>
+
+</div>
+
+<footer>
+    © 2025 - GTA Mods do Pedro | Projeto para amigos
+</footer>
+
+</body>
+</html>
